--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+/* clears the 'X' from Internet Explorer */
+input[type=search]::-ms-clear {  display: none; width : 0; height: 0; }
+input[type=search]::-ms-reveal {  display: none; width : 0; height: 0; }
+
+/* clears the 'X' from Chrome */
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration { display: none; }
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 *,*::after,*::before{
@@ -12,7 +23,7 @@ body{
     text-decoration: italic;
 }
 .navbar-container{
-    background: linear-gradient(-45deg, #6b6967, white);
+    background: linear-gradient(-45deg, #7294b5,#a19c97, white);
     user-select: none;
     
 }
@@ -60,7 +71,7 @@ body{
 }
 
 .category-title{
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     flex: 0 0 calc(16.6667% - 10px);
     display: flex;
     justify-content: center;
@@ -75,6 +86,10 @@ body{
     opacity: 0.7;
 }
 
-hr{
+.hr-opacity{
     opacity: 0.3;
+}
+
+.active{
+    
 }
