--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ body{
     text-decoration: italic;
 }
 .navbar-container{
-    background: linear-gradient(-45deg, #7294b5,#a19c97, white);
     user-select: none;
+    background: #D8D8D8;
     
 }
 .navbar{
@@ -71,6 +71,7 @@ body{
 }
 
 .category-title{
+    user-select: none;
     font-size: 1.2rem;
     flex: 0 0 calc(16.6667% - 10px);
     display: flex;
@@ -86,12 +87,12 @@ body{
     opacity: 0.7;
 }
 
-.hr-opacity{
+hr{
     opacity: 0.3;
 }
 
 .active{
-    color: red;
+    background-color: red;
 }
 /* animacja podkreślenia */
 .hover-underline-animation {
